--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Shipping.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Shipping.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Shipping:
+WinkelCo\MercadoLibreApi\Entity\Shipping:
   exclusion_policy: NONE
   properties:
     dimensions:
