Update and rename Zephia.MercadoLibre.Entity.Company.yml to WinkelCo.MercadoLibreApi.Entity.Company.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Company.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Company.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Company:
+WinkelCo\MercadoLibreApi\Entity\Company:
   exclusion_policy: NONE
   properties:
     brand_name:
