Update and rename Zephia.MercadoLibre.Entity.BuyerReputation.yml to WinkelCo.MercadoLibreApi.Entity.BuyerReputation.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.BuyerReputation.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.BuyerReputation.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\BuyerReputation:
+WinkelCo\MercadoLibreApi\Entity\BuyerReputation:
   exclusion_policy: NONE
   properties:
     canceled_transactions:
@@ -6,4 +6,4 @@ Zephia\MercadoLibre\Entity\BuyerReputation:
     tags:
       type: "array"
     transactions:
-      type: "Zephia\\MercadoLibre\\Entity\\BuyerTransaction"
+      type: "WinkelCo\\MercadoLibreApi\\Entity\\BuyerTransaction"
