Update and rename Zephia.MercadoLibre.Entity.BillData.yml to WinkelCo.MercadoLibreApi.Entity.BillData.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.BillData.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.BillData.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\BillData:
+WinkelCo\MercadoLibreApi\Entity\BillData:
   exclusion_policy: NONE
   properties:
     accept_credit_data:
