Update and rename Zephia.MercadoLibre.Entity.Address.yml to WinkelCo.MercadoLibreApi.Entity.Address.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Address.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Address.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Address:
+WinkelCo\MercadoLibreApi\Entity\Address:
   exclusion_policy: NONE
   properties:
     address:
