--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Description.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Description.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Description:
+WinkelCo\MercadoLibreApi\Entity\Description:
   exclusion_policy: NONE
   properties:
     id:
