Update and rename Zephia.MercadoLibre.Entity.Geolocation.yml to WinkelCo.MercadoLibreApi.Entity.Geolocation.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Geolocation.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Geolocation.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Geolocation:
+WinkelCo\MercadoLibreApi\Entity\Geolocation:
   exclusion_policy: NONE
   properties:
     latitude:
