Update and rename Zephia.MercadoLibre.Entity.Identification.yml to WinkelCo.MercadoLibreApi.Entity.Identification.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Identification.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Identification.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Identification:
+WinkelCo\MercadoLibreApi\Entity\Identification:
   exclusion_policy: NONE
   properties:
     number:
