Update and rename Zephia.MercadoLibre.Entity.ImmediatePayment.yml to WinkelCo.MercadoLibreApi.Entity.ImmediatePayment.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ImmediatePayment.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ImmediatePayment.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\ImmediatePayment:
+WinkelCo\MercadoLibreApi\Entity\ImmediatePayment:
   exclusion_policy: NONE
   properties:
     reasons:
