Update and rename Zephia.MercadoLibre.Entity.ListingDetail.yml to WinkelCo.MercadoLibreApi.Entity.ListingDetail.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ListingDetail.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ListingDetail.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\ListingDetail:
+WinkelCo\MercadoLibreApi\Entity\ListingDetail:
   exclusion_policy: NONE
   properties:
     available_listings:
