Update and rename Zephia.MercadoLibre.Entity.Localization.yml to WinkelCo.MercadoLibreApi.Entity.Localization.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Localization.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Localization.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Localization:
+WinkelCo\MercadoLibreApi\Entity\Localization:
   exclusion_policy: NONE
   properties:
     id:
