--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Location.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.Location.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\Location:
+WinkelCo\MercadoLibreApi\Entity\Location:
   exclusion_policy: NONE
   properties:
     address_line:
@@ -12,12 +12,12 @@ Zephia\MercadoLibre\Entity\Location:
     longitude:
       type: "float"
     neighborhood:
-      type: "Zephia\\MercadoLibre\\Entity\\Localization"
+      type: "WinkelCo\\MercadoLibreApi\\Entity\\Localization"
     open_hours:
       type: "string"
     search_location:
-      type: "Zephia\\MercadoLibre\\Entity\\SearchLocation"
+      type: "WinkelCo\\MercadoLibreApi\\Entity\\SearchLocation"
     state:
-      type: "Zephia\\MercadoLibre\\Entity\\Localization"
+      type: "WinkelCo\\MercadoLibreApi\\Entity\\Localization"
     zip_code:
       type: "string"
