Update and rename Zephia.MercadoLibre.Entity.ItemList.yml to WinkelCo.MercadoLibreApi.Entity.ItemList.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ItemList.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.ItemList.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\ItemList:
+WinkelCo\MercadoLibreApi\Entity\ItemList:
   exclusion_policy: NONE
   properties:
     query:
