Update and rename Zephia.MercadoLibre.Entity.SellerTransaction.yml to WinkelCo.MercadoLibre.Entity.SellerTransaction.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibre.Entity.SellerTransaction.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibre.Entity.SellerTransaction.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\SellerTransaction:
+WinkelCo\MercadoLibreApi\Entity\SellerTransaction:
   exclusion_policy: NONE
   properties:
     canceled:
@@ -8,6 +8,6 @@ Zephia\MercadoLibre\Entity\SellerTransaction:
     period:
       type: "string"
     ratings:
-      type: "Zephia\\MercadoLibre\\Entity\\Rating"
+      type: "WinkelCo\\MercadoLibreApi\\Entity\\Rating"
     total:
       type: "integer"
