Update and rename Zephia.MercadoLibre.Entity.SellerContact.yml to WinkelCo.MercadoLibreApi.Entity.SellerContact.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.SellerContact.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.SellerContact.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\SellerContact:
+WinkelCo\MercadoLibreApi\Entity\SellerContact:
   exclusion_policy: NONE
   properties:
     area_code:
