Update and rename Zephia.MercadoLibre.Entity.NotYetRated.yml to WinkelCo.MercadoLibreApi.Entity.NotYetRated.yml

--- a/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.NotYetRated.yml
+++ b/resources/config/serializer/WinkelCo.MercadoLibreApi.Entity.NotYetRated.yml
@@ -1,4 +1,4 @@
-Zephia\MercadoLibre\Entity\NotYetRated:
+WinkelCo\MercadoLibreApi\Entity\NotYetRated:
   exclusion_policy: NONE
   properties:
     paid:
