--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "symfony/yaml": "~2.1|~3.0",
+    "symfony/yaml": "~2.1|~3.0|~5.0",
     "guzzlehttp/guzzle": "~5.0|~6.0|~7.0",
-    "jms/serializer": "^1.3"
+    "jms/serializer": "^1.3|^3.11"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.5"
+    "phpunit/phpunit": "^5.5|^9.0"
   },
   "autoload": {
     "psr-4": {
